# RoboticsSoftwareEngineerUdacity

./: .gitignore
BuildMyWorld/world/: UdacityOffice.world
GazeboWorld/myrobot/: CMakeLists.txt
GoChaseIt/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
GoChaseIt/install/my_robot/share/my_robot/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.ps1  package.sh  package.xml  package.zsh
GoChaseIt/install/my_robot/share/my_robot/cmake/: my_robotConfig-version.cmake  my_robotConfig.cmake
GoChaseIt/install/my_robot/share/my_robot/environment/: ament_prefix_path.dsv  ament_prefix_path.sh  path.dsv  path.sh
GoChaseIt/install/my_robot/share/my_robot/launch/: world.launch.py
GoChaseIt/install/my_robot/share/my_robot/urdf/: my_robot.xacro
GoChaseIt/install/my_robot/share/my_robot/worlds/: empty.world
GoChaseIt/install/robot_spawner_pkg/lib/robot_spawner_pkg/: spawn_robot
GoChaseIt/install/robot_spawner_pkg/share/robot_spawner_pkg/: package.dsv  package.ps1  package.sh
GoChaseIt/log/: latest_build
GoChaseIt/src/my_robot/: CMakeLists.txt  package.xml
GoChaseIt/src/my_robot/launch/: world.launch.py
GoChaseIt/src/robot_spawner_pkg/: package.xml  setup.py
GoChaseIt/src/robot_spawner_pkg/robot_spawner_pkg/: spawn_robot.py
Localization/: gaussian.cpp  kalman.cpp
Project1/model/Building/model/: model.sdf
Project1/model/HumanoidRobot/model/: model.sdf
Project1/script/: welcome_message.cpp
myrobot/model/mybuilding/: model.sdf
myrobot/model/robot/: model.sdf
myrobot/world/: world
(+2 files in other folders)
